dropDown on preview page

--- a/preview_survey.html
+++ b/preview_survey.html
@@ -18,10 +18,10 @@
                 </div>
                 <div class="survey__wrapper">
                     <div class="survey col-3 col-s-3">
-                        <p class="survey__title__prev">%surveytitle%</p>
+                        <p class="survey__title__prev"></p>
                     </div>
                     <div class="survey col-3 col-s-3">
-                        <div class="survey__description__prev">%surveydescription%</div>
+                        <div class="survey__description__prev"></div>
                     </div>
                 </div>
             </div>
