--- a/preview_survey.html
+++ b/preview_survey.html
@@ -47,7 +47,9 @@
             <h1>Some text here</h1>
         </div>
 
-        <script src="src/script/questionController.js"></script>
+        <!--<script src="src/script/uiController.js"></script>-->
+        <script src="src/script/previewUIController.js"></script>
+        <!--<script src="src/script/questionController.js"></script>-->
         <script src="src/script/previewControllerv8.js"></script>
     </body>
 </html>
